# libre_chess

./: Cargo.toml  README.md
engine/: Cargo.toml
engine/src/: lib.rs  movement.rs
engine/src/app/: mod.rs  sets.rs
engine/src/domain/: board.rs  mod.rs  movement.rs  play.rs  render.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/hooks/: useChess.ts
frontend/src/pages/: index.tsx
lib/: Cargo.toml  README.md  coverage.txt  readme.md
lib/src/: color.rs  game_board.rs  game_mode.rs  lib.rs  mov.rs  movement.rs  piece.rs
lib/src/board/: col.rs  mod.rs  pos.rs  row.rs
lib/src/game/: board.rs  capture.rs  game.rs  mod.rs  mode.rs  piece.rs  play.rs  player.rs  rule.rs  selection.rs  turn.rs  variant.rs
lib/src/game/mov/: mod.rs  mov.rs
lib/src/game/mov/default/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
lib/src/game/mov/special/: castling.rs  en_passant.rs  mod.rs
lib/src/game/movement/: bishop.rs  king.rs  knight.rs  mod.rs  movement.rs  naive.rs  pawn.rs  queen.rs  rook.rs
lib/src/game/rule/: allowed_movements.rs  allowed_moves.rs  check.rs  init.rs  legal_moves.rs  mod.rs  move_piece.rs  pseudo_legal_moves.rs  turn.rs
lib/src/game_board/: game_piece.rs  mod.rs
lib/src/geometry/: mod.rs
lib/src/geometry/poligon/: rect.rs
lib/src/play/: mod.rs  player.rs  selection.rs  turn.rs  variant.rs
lib/src/play/movement/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
lib/src/pos/: col.rs  mod.rs  row.rs
src/: board.rs  main.rs  movement.rs  piece.rs
src/board/: board.rs  board_pos.rs  board_x.rs  board_y.rs  mod.rs
src/movement/: mod.rs  pawn_white_move.rs
web_backend/: Cargo.toml  build.sh
web_backend/src/: app.rs  app_info.rs  board_color.rs  board_set.rs  lib.rs  model.rs  prop.rs  render.rs  sets.rs  settings.rs  state.rs
web_backend/src/app/: sets.rs
web_backend/src/domain/: board.rs  mod.rs  piece.rs  render.rs
web_frontend/: package.json  pnpm-lock.yaml  vite.config.ts
web_frontend/src/components/: Select.tsx
web_frontend/src/hooks/: useChess.ts
web_frontend/src/lib/components/: Select.svelte
web_frontend/src/pages/: index.tsx
web_frontend/src/routes/: +page.svelte
web_frontend_deprecated/: package.json
web_frontend_deprecated/src/hooks/: useChess.ts
(+24 files in other folders)
