[package]
name = "libre_chess_web_backend"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.94"
web-sys = { version = "0.3.71", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'Window',
    'Blob',
    'BlobPropertyBag',
    'console',
    'Url',
    'MouseEvent'
] }
libre_chess_lib = { path = "../lib" }