[package]
name = "libre_chess_web_backend"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.94"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.71", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'Window',
    'Blob',
    'BlobPropertyBag',
    'console',
    'Url',
    'MouseEvent',
    'CanvasGradient',
] }
libre_chess_lib = { path = "../lib" }
manfredo = { git = "https://github.com/joao-arthur/manfredo", rev = "195e152159c8b74343f548fbbdd51a5e3fae6b0a" }
