[package]
name = "libre_chess_web_backend"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.77", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'Window',
    'Blob',
    'BlobPropertyBag',
    'console',
    'Url',
    'MouseEvent',
    'CanvasGradient',
] }
libre_chess_lib = { path = "../lib" }
manfredo = { git = "https://github.com/joao-arthur/manfredo", rev = "4ae37e3b9b66532af1ac66f2c16157d831af6910" }
